@@ -1,5 +1,12 @@
 2017-01-16  Edward Jones  <ed.jones@embecosm.com>
 
+	* script/feature-extract.py: Update formatting.
+	* script/generate-builds.py: Likewise.
+	* script/mageec.py: Likewise.
+	* script/measure-code-size.py: Likewise.
+
+2017-01-16  Edward Jones  <ed.jones@embecosm.com>
+
 	* lib/Database.cpp (Database::addResults): If a result is
 	added for a compilation id and metric already in the database,
 	replace the old value.
